добавлен стиль для кнопок

--- a/src/index.html
+++ b/src/index.html
@@ -63,15 +63,8 @@
                     </label>
                     <input type="text" class="g-input" placeholder="Some text here" />
 
-                    <div class="g-clearfix">
-                        <div class="btn btn-main right">
-                            <button type="button">
-                                <div class="icon-container">
-                                    <i class="icon ask-feedback-main-icon"></i>
-                                </div>
-                                Create new survey
-                            </button>
-                        </div>
+                    <div class="g-text-right">
+                        <button type="button" class="g-btn">Create new survey</button>
                     </div>
                 </div>
                 <!--/left col-->
@@ -79,7 +72,7 @@
                 <div class="b-modal__col b-modal__col--last">
                     <div class="b-panel">
                         <div class="b-panel__header">
-                            How happy did you feel at work this week?
+                            <b>How happy did you feel at work this week?</b>
                         </div>
                         <div class="b-panel__entry">
                             <div class="b-smile">
@@ -110,12 +103,8 @@
                                         </span>
                                     </div>
                                 </div>
-                                <div class="g-col g-col--one-third">
-                                    <div class="btn btn-extra right">
-                                        <button type="button" disabled>
-                                            Anonymous
-                                        </button>
-                                    </div>
+                                <div class="g-text-right">
+                                    <button type="button" class="g-btn g-btn--alt">Anonymous</button>
                                 </div>
                             </div>
                         </div>
