добавлен фикс в скрипт модального окна

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!--MAIN CONTENT-->
-    <main class="g-container">
+    <main class="g-container" style="min-height:5000px">
         <div class="g-row">
             <div class="g-col g-col--one-third">
                 <button type="button" class="g-btn" data-modal="modal">
