Добавлена ссылка на страницу feedback.html

--- a/src/index.html
+++ b/src/index.html
@@ -178,9 +178,12 @@
         </div>
 
         <div class="g-row">
-            <p>
-                <a href="feedback.html">See another page ></a>
-            </p>
+            <div class="g-col g-col--one-half"></div>
+            <div class="g-col g-col--one-half">
+                <p>
+                    <a href="feedback.html">See another page ></a>
+                </p>
+            </div>
         </div>
         <!--Modal windows-->
         <div class="b-modal" id="modal00">
