добавлены error state к инпутам, фикс для иконок на кнопках

--- a/src/buttons.html
+++ b/src/buttons.html
@@ -11,7 +11,7 @@
         <div class="g-row">
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon">
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Button with icon
                 </button>
             </div>
@@ -35,13 +35,13 @@
             </div>
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon g-btn--main">
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Button with icon
                 </button>
             </div>
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon g-btn--main" disabled>
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Disabled button
                 </button>
             </div>
@@ -57,13 +57,13 @@
             </div>
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon g-btn--secondary">
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Button with icon
                 </button>
             </div>
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon g-btn--secondary" disabled>
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Disabled button
                 </button>
             </div>
@@ -79,13 +79,13 @@
             </div>
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon g-btn--text">
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Button with icon
                 </button>
             </div>
             <div class="g-col g-col--one-fourth">
                 <button type="button" class="g-btn g-btn--has-icon g-btn--text" disabled>
-                    <img src="http://placehold.it/16x16" alt="" />
+                    <i class="icon" style="background-image:url(http://placehold.it/16x16)"></i>
                     Disabled button
                 </button>
             </div>
