--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,11 @@
         </div>
 
         <div class="g-row">
-            <div class="g-col g-col--one-third">
+            <div class="g-col g-col--one-fourth">
                 <label class="g-label">Standart input</label>
                 <input type="text" class="g-input" placeholder="Text input" />
             </div>
-            <div class="g-col g-col--one-third">
+            <div class="g-col g-col--one-fourth">
                 <label class="g-label">Standart Select</label>
                 <select class="g-select">
                     <option>
@@ -50,6 +50,20 @@
                     <option>Option 2</option>
                     <option>Option 3</option>
                 </select>
+            </div>
+            <div class="g-col g-col--one-fourth">
+                <fieldset class="g-fieldset">
+                    <label class="g-label">Standart input with tip</label>
+                    <input type="text" class="g-input" placeholder="Text input" />
+                    <span class="g-tip">Some tip</span>
+                </fieldset>
+            </div>
+            <div class="g-col g-col--one-fourth">
+                <fieldset class="g-fieldset error">
+                    <label class="g-label">Standart input - error class</label>
+                    <input type="text" class="g-input" placeholder="Text input" />
+                    <span class="g-tip">Error tip</span>
+                </fieldset>               
             </div>
         </div>
 
@@ -77,7 +91,7 @@
         </div>
 
         <div class="g-row">
-            <div class="g-col g-col--one-half">
+            <div class="g-col g-col--one-fourth">
                 <label class="g-label">Input emulation</label>
                 <div class="g-likeinput">
                     <div class="g-likeinput__wrap">
@@ -98,6 +112,30 @@
                             Option 3
                         </li>
                     </ul>
+                </div>
+            </div>
+            <div class="g-col g-col--one-fourth">
+                <label class="g-label">Input emulation with error</label>
+                <div class="g-likeinput error">
+                    <div class="g-likeinput__wrap">
+                        <input type="text" class="g-likeinput__input" placeholder="Placeholder" />
+                    </div>
+
+                    <ul class="g-likeinput__list">
+                        <li class="g-likeinput__item">
+                            <img src="http://placehold.it/16x16" class="g-likeinput__img" alt="" />
+                            Option 1
+                        </li>
+                        <li class="g-likeinput__item">
+                            <img src="http://placehold.it/16x16" class="g-likeinput__img" alt="" />
+                            Option 2
+                        </li>
+                        <li class="g-likeinput__item">
+                            <img src="http://placehold.it/16x16" class="g-likeinput__img" alt="" />
+                            Option 3
+                        </li>
+                    </ul>
+                    <span class="g-tip">Error message</span>
                 </div>
             </div>
             <div class="g-col g-col--one-half">
